# stop

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  slurm.py
man/: stop.1
src/: stop.py  tui.py
src/stop/: main.py  slurm.py  tui.css  tui.py
tests/: test_main.py
