[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stop"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.31.0",
    "textual[syntax]>=3.5.0",
    "textual-serve",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "textual-dev",
]

[project.scripts]
stop = "stop.main:main"

[tool.setuptools]
packages = ["stop"]
package-dir = {"" = "src"}
package-data = {"stop" = ["*.css"]}

[tool.setuptools.data-files]
"share/man/man1" = ["man/stop.1"]
